# tiny-researcher

./: Cargo.toml  README.md
configs/: cpu_fallback.toml  gtx1650_4gb.toml  offline.toml
docs/: modeling.md  no_api_guarantee.md  setup.md
models/: .gitignore
orchestrator/: Cargo.toml
orchestrator/src/: main.rs
orchestrator/src/agent/: loop.rs  mod.rs  state.rs
orchestrator/src/memory/: mod.rs  scratchpad.rs  store.rs
orchestrator/src/runtime/: llm_client.rs
orchestrator/src/tools/: local_search.rs  mod.rs  rank.rs  scrape.rs  summarize.rs
scripts/: curate_citation_formatting.py  curate_planning.py  curate_source_triage.py  curate_synthesis.py  run_finetune.sh  train_qlora.py
src/: config.rs  doctor.rs  main.rs  telemetry.rs
src/runtime/: validator.rs
src/tools/: mod.rs
